# Winglad

./: .gitignore  README.md  pyproject.toml
winglad/: 99-ctrl-controller.rules  controller.py  main.py
winglad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
winglad/static/: client.js  index.html  style.css
