[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "winglad"
version = "0.1.0"
description = "A virtual controller server for Linux"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "aiohttp",
    "python-uinput",
    "qrcode",
    "netifaces",
]

[project.scripts]
winglad = "winglad.main:main"
winglad-setup = "winglad.main:setup_permissions"

[tool.setuptools.packages.find]
where = ["."]
include = ["winglad*"]

[tool.setuptools.package-data]
winglad = ["static/*", "99-ctrl-controller.rules"]
